--- a/index.html
+++ b/index.html
@@ -1,13 +1,124 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Busco oferecer o melhor serviço de entrega..."
+    />
+    <!--arrumar aqui-->
+    <link rel="icon" href="assets/icon.png" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Motoboy</title>
+  </head>
+  <body>
+    <header>
+      <div class="wrapper menu">
+        <div class="titulo">
+          <h1>Nome do Motoboy</h1>
+        </div>
+        <ul>
+          <li><a href="#about">Sobre mim</a></li>
+          <li><a href="#services">Serviços</a></li>
+          <li><a href="#contact">Contato</a></li>
+        </ul>
+      </div>
+    </header>
+
+    <div class="container">
+      <div class="wrapper-apresentação">
+        <div class="texto-apresentação">
+          <h1>Nome do Motoboy</h1>
+          <p>
+            O melhor serviços para você, atendimento região capital e região
+            metropolitana.
+          </p>
+          <a href="#contact" class="btn">Entre em contato</a>
+        </div>
+        <div class="imagem-apresentação">
+          <img
+            src="/assets/entregador-ilustracao.png"
+            alt="Ilustração entregador"
+          />
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="wrapper" id="about">
+        <div>
+          <h2>Sobre mim</h2>
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's standard dummy text
+            ever since the 1500s. When an unknown printer took a galley of type
+            and scrambled it to make a type specimen book. It has survived not
+            only five centuries.
+          </p>
+        </div>
+        <div>
+          <img src="assets/foto-motoboy" alt="Foto do motoboy" />
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="wrapper" id="services">
+        <div><h2>Serviços</h2></div>
+        <div class="list-services">
+          <div class="items-services">
+            <h3>Padrão</h3>
+            <ul>
+              <li>Atendimento</li>
+              <li>Socorro</li>
+              <li>Entrega</li>
+            </ul>
+            <a href="#contact" class="btn">Entre em contato agora mesmo</a>
+          </div>
+
+          <div class="items-services">
+            <h3>Exclusivos</h3>
+            <ul>
+              <li>Serviços cartório</li>
+              <li>Despachante</li>
+            </ul>
+            <a href="#contact" class="btn">Entre em contato agora mesmo</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="wrapper" id="contact">
+        <div><h2>Contato</h2></div>
+        <div class="list-contact">
+          <div class="items-contact">
+            <p>
+              Entre em contato comigo, será um prazer te atender. Você pode
+              clicar na palavra WhatsApp ou no ícone que será direcionado para a
+              minha conversa e podemos combinar o seu atendimento.
+            </p>
+          </div>
+
+          <div class="items-contact">
+            <div>
+              <a href="https://wa.me/" target="_blank"
+                ><img src="/assets/whatsapp.png" alt="Ícone do WhatsApp"
+              /></a>
+            </div>
+            <div>
+              <p><a href="https://wa.me/" target="_blank">WhatsApp</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <footer>
+      <p>Nome do Motoboy</p>
+      <p>&copy; 2022 Todos os direitos reservados.</p>
+    </footer>
+  </body>
 </html>
