--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Busco oferecer o melhor serviço de entrega, com qualidade, agilidade e segurança."/> 
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@100;400;700&display=swap" rel="stylesheet">
-    <link rel="icon" href="assets/entregador-icon.png">
+    <link rel="icon" href="assets/icon.png">
     <link rel="stylesheet" href="style.css"/>
     <title>[Nome do Motoboy]</title>
   </head>
